fix(blogArticles): Remove overflow and adjust grid

--- a/src/components/molecules/articleItem/articleItem.module.scss
+++ b/src/components/molecules/articleItem/articleItem.module.scss
@@ -17,6 +17,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: bottom center;
   border-radius: 20px;
 }
 
@@ -59,9 +60,9 @@
       "articleImg articleTitle articleTitle"
       "articleImg articleText articleText"
       "articleImg articleAuthor articleDate";
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-    min-width: 700px;
+    grid-template-columns: 1fr 1fr 1.1fr;
+    width: 100%;
+    max-width: none;
   }
 
   .articleImg {
